[gd_scene load_steps=9 format=3 uid="uid://caht0gwfoctd0"]

[ext_resource type="Script" uid="uid://dbopdd63uxn0b" path="res://Car/car.gd" id="1_v636r"]
[ext_resource type="Texture2D" uid="uid://cm7rji4j6rras" path="res://Resourses/Assets/wheel.png" id="2_argwm"]
[ext_resource type="Texture2D" uid="uid://cqor43mjmo3x6" path="res://Resourses/Assets/car.png" id="2_v636r"]
[ext_resource type="Texture2D" uid="uid://bmkyuk46v74bp" path="res://Resourses/Assets/shadow.png" id="2_vkism"]
[ext_resource type="Texture2D" uid="uid://detr86dc8xago" path="res://Resourses/Assets/specular.png" id="5_vkism"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v636r"]
radius = 39.0
height = 164.0

[sub_resource type="SpriteFrames" id="SpriteFrames_32r3e"]
animations = [{
"frames": [],
"loop": false,
"name": &"boom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v636r")
}],
"loop": true,
"name": &"full_health",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"health-1",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"health-2",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"health-3",
"speed": 5.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_vkism"]
diffuse_texture = ExtResource("2_v636r")
normal_texture = ExtResource("5_vkism")
specular_texture = ExtResource("5_vkism")
specular_shininess = 0.5

[node name="Car" type="CharacterBody2D"]
script = ExtResource("1_v636r")

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(-20, 0)
texture = ExtResource("2_vkism")

[node name="LeftWheel" type="Sprite2D" parent="."]
position = Vector2(52, -36)
texture = ExtResource("2_argwm")

[node name="RightWheel" type="Sprite2D" parent="."]
position = Vector2(52, 34)
texture = ExtResource("2_argwm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v636r")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GearTimer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_32r3e")
animation = &"full_health"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = SubResource("CanvasTexture_vkism")

[connection signal="timeout" from="GearTimer" to="." method="_on_gear_timer_timeout"]
